[package]
name = "twister"
version = "0.1.0"
authors = ["Rob N ★ <robn@robn.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
mio = { version = "0.7.7", features = ["os-poll", "net"] }
bimap = "0.6.0"
friendly-zoo = "0.2.1"
